<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    tools:context="com.example.shican.androidlabs.ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButton"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBox"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:text="@string/swtich"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        android:contentDescription="camera"
        android:layout_columnWeight="1"
        android:gravity="fill"/>
</GridLayout>
